--- a/app/src/main/res/layout/activity_semester.xml
+++ b/app/src/main/res/layout/activity_semester.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:padding="16dp"
-    tools:context=".SemesterActivity">
+    tools:context=".activities.SemesterActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
