--- a/app/src/main/res/layout/card_view_course.xml
+++ b/app/src/main/res/layout/card_view_course.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="8dp"
-    app:cardCornerRadius="20dp"
-    app:cardElevation="7dp">
+    style="@style/cardViewStyle">
 
     <RelativeLayout
         android:layout_width="match_parent"
