--- a/app/src/main/res/layout/card_view_department.xml
+++ b/app/src/main/res/layout/card_view_department.xml
@@ -4,9 +4,8 @@
     android:id="@+id/card_view_department"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardElevation="8dp"
-    app:cardCornerRadius="20dp"
-    android:layout_marginBottom="7dp">
+    android:layout_marginBottom="7dp"
+    style="@style/cardViewStyle">
 
     <RelativeLayout
         android:layout_width="match_parent"
