--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="cardViewStyle">
+        <item name="cardElevation">8dp</item>
+        <item name="cardCornerRadius">20dp</item>
+    </style>
+
 </resources>
