--- a/app/src/main/res/layout/fragment_department.xml
+++ b/app/src/main/res/layout/fragment_department.xml
@@ -4,17 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
     android:padding="16dp"
-    tools:context=".activities.SemesterActivity">
+    tools:context=".activity.DepartmentActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
-
-
-
+        android:layout_height="wrap_content"/>
 
 </RelativeLayout>
