--- a/app/src/main/res/layout/activity_course_info.xml
+++ b/app/src/main/res/layout/activity_course_info.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".activities.CourseInfoActivity">
+    tools:context=".activity.CourseInfoActivity">
 
     <TextView
         android:id="@+id/course_info_number"
