--- a/app/src/main/res/layout/fragment_semester.xml
+++ b/app/src/main/res/layout/fragment_semester.xml
@@ -4,12 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     android:padding="16dp"
-    tools:context=".activities.DepartmentActivity">
+    tools:context=".activity.SemesterActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent"/>
+
+
+
+
 
 </RelativeLayout>
