commited on May 5th

--- a/app/src/main/res/layout/fragment_about_me.xml
+++ b/app/src/main/res/layout/fragment_about_me.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="16dp"
     tools:context=".activity.MainActivity">
 
     <ImageView
@@ -32,7 +33,8 @@
         android:id="@+id/reg_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/image"/>
-
+        android:layout_below="@+id/image"
+        android:layout_marginTop="16dp"
+        />
 
 </RelativeLayout>
