--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -7,7 +7,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Calendar Comming Soon"
+        android:text="Calendar Coming Soon"
         android:textSize="30sp"
         android:layout_centerInParent="true"/>
 
