--- a/app/src/main/res/layout/fragment_about_me.xml
+++ b/app/src/main/res/layout/fragment_about_me.xml
@@ -19,7 +19,8 @@
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/image" />
+        android:layout_toRightOf="@id/image"
+        android:textSize="24dp"/>
 
     <TextView
         android:id="@+id/course_trail"
